# picatch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  diesel.toml  picatch.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dockerimage.yml  rust.yml
migrations/2019-12-15-202853_create_roles/: down.sql  up.sql
migrations/2019-12-15-204143_create_users/: up.sql
migrations/2019-12-16-045507_create_sessions/: down.sql  up.sql
migrations/2019-12-16-230801_create_permissions/: up.sql
migrations/2019-12-16-231028_create_user_roles/: down.sql  up.sql
migrations/2019-12-16-231617_create_role_permissions/: up.sql
photos/: hello.txt
src/: api.rs  auth.rs  constants.rs  error.rs  lib.rs  main.rs  resizer.rs  schema.rs  setup.rs  utils.rs
src/api/: album.rs  image.rs  index.rs  login.rs  logout.rs  mod.rs  register.rs  user.rs
src/auth/: crypto.rs  mod.rs  permission.rs  session.rs
src/filesystem/: background.rs  files.rs  hash.rs  mod.rs  path.rs  resizer.rs  startup.rs  utils.rs  watcher.rs
src/model/: auth.rs  config.rs  directory.rs  image_size.rs  mod.rs  pool.rs  resize_job.rs  resize_options.rs  static_assets.rs
src/model/store/: mod.rs  permission.rs  role.rs  role_permission.rs  session.rs  user.rs  user_role.rs
src/routes/: config.rs  directory_api.rs  mod.rs  static_files.rs
src/utils/: logging.rs
static/: .prettierrc  jest.config.js  package.json  rollup.config.js  svelte.config.js  tsconfig.json
static/public/: index.html
static/src/: AlbumItem.svelte  App.svelte  Gallery.svelte  ImageItem.svelte  constants.js  gallery.js  global.d.ts  index.html  main.js  main.js.map  main.ts  types.ts  util.js
static/src/Router/: Router.svelte  history.js
static/src/js/: api.ts  constants.ts  dom.ts  main.ts  router.test.ts  router.ts  types.ts
static/src/ts/: api.ts  dom.ts  router.test.ts  router.ts  routing.ts
tests/: auth_test.rs  config_test.rs  destination_path_test.rs  directory_api_test.rs  resizer_test.rs  session_test.rs  startup_test.rs
tests/test_photos/test/: _picatch.album.toml
web/: .eslintrc.json  .prettierrc  package.json
web/public/: index.html
web/src/: App.test.tsx  App.tsx  constants.ts  types.ts  util.test.ts  util.ts
web/src/components/: Album.tsx  AlbumItem.tsx  Breadcrumbs.tsx  DirItem.tsx  Footer.tsx  Header.tsx  Image.tsx  ImageItem.tsx  JustifiedLayout.tsx  Links.tsx  index.d.ts
web/src/contexts/: LoadingContext.tsx
web/src/hooks/: useActiveFile.tsx  useAlbumApi.tsx  useKeyboardNavigation.tsx  useKeypress.tsx  usePathComponents.tsx  usePrevious.tsx  useResize.tsx
web/src/reducers/: activeFileActions.ts  (+1 more)
(+14 files in other folders)
