[package]
name = "picatch"
version = "0.1.0"
authors = ["drklee3 <derrick@dlee.dev>"]
edition = "2018"

[lib]
name = "picatch_lib"
path = "src/lib.rs"

[[bin]]
name = "picatch"
path = "src/main.rs"

[dependencies]
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-http = "1.0.1"
actix-identity = "0.2.1"
actix-rt = "1.1.1"
actix-web = "2.0.0"
blake2 = "0.9.0"
config = "0.10.1"
dotenv = "0.15.0"
futures = "0.3.1"
image = "0.23.4"
kamadak-exif = "0.5.1"
lazy_static = "1.4.0"
mime_guess = "2.0.3"
notify = "4.0.15"
rand = "0.7.3"
rust-embed="5.5.1"
serde = "1.0.103"
serde_derive = "1.0.103"
toml = "0.5.5"

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]

[dependencies.fern]
version = "0.6.0"
features = ["colored"]

[dependencies.log]
version = "0.4.8"
features = ["serde"]

[features]
default = []

use-fs-for-static = []
